--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -9,5 +9,5 @@ modules:
     enabled:
         - PhpBrowser:
             url: http://localhost/myapp
-        - \Helper\Acceptance
-step_decorators: ~        
+        - Tests\Support\Helper\Acceptance
+step_decorators: ~
