--- a/.config/build.properties
+++ b/.config/build.properties
@@ -6,7 +6,10 @@
 #  do not have to enclose strings
 # I guess that is all there is to property files
 
-#Used in Alfred, Gordon, et al
+#Show all output
+build.isVerbose=true
+
+#Used in CI, et al
 #must be a valid php identifier
 prj.identkey=library.clients-brex
 
@@ -16,8 +19,9 @@ prj.name=Brex SDK for PHP
 #Version Number to "seed"
 prj.initver=0.1.0
 
-
-build.isVerbose=true
+#Test Ops
+#destructive tests
+test.skipGroup=writers
 
 #Paths
 dir.buildConfs=.config
