--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "symfony/http-client": "^8.0",
         "php-http/mock-client": "^1.5",
         "jane-php/open-api-3": "^7.4",
-        "friendsofphp/php-cs-fixer": "^3.92",
+        "friendsofphp/php-cs-fixer": "< 3.91.0",
         "php-http/logger-plugin": "^1.3",
         "monolog/monolog": "^3.3"
     },
